# raspberry-pi-dashboard

./: .env-template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aws/: template.yaml
aws/src/: message_handlers.py
backend/src/: calendar_utils.py  db.py  db_utils.py  testdb.py
backend/src/api_fetchers/: base_fetcher.py  calendar.py  sports.py  weather.py
