[project]
name = "dashboard-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[project.scripts]
weather-fetch = "backend.src.api_fetchers.weather:main"
calendar-fetch = "backend.src.api_fetchers.calendar:main"
