[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "cryptography==48.0.0",
    "dotenv==0.9.9",
    "google-api-core==2.30.3",
    "google-api-python-client==2.195.0",
    "google-auth==2.50.0",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.3.1",
    "googleapis-common-protos==1.74.0",
    "httplib2==0.31.2",
    "idna==3.13",
    "oauthlib==3.3.1",
    "proto-plus==1.27.2",
    "protobuf==7.34.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pyparsing==3.3.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[project.scripts]
weather-fetch = "backend.src.api_fetchers.weather:main"
calendar-fetch = "backend.src.api_fetchers.calendar:main"
